@@ -1,3 +1,13 @@
+[COLOR="DeepSkyBlue"]4.3.10 (118)[/COLOR]:
+[LIST]
+[*] Fixed list updating for non-Backpack bags that got turned off while experimenting with speedups.
+[/LIST]
+
+[COLOR="DeepSkyBlue"]4.3.9 (117)[/COLOR]:
+[LIST]
+[*] Updated Russian language strings as provided by VChet. Thank you!
+[/LIST]
+
 [COLOR="DeepSkyBlue"]4.3.8 (116)[/COLOR]:
 [LIST]
 [*] API bump
